2024-03-24  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/35252fceefdeb7b0920d9c1513efb4b5c05633dc ) and raygui ( https://github.com/raysan5/raygui/commit/9060e3bf33795dad4fdb4f60585b07901ffa5dee )

2024-03-10  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/f072497551d9f03b5fbded289f8af021c103a8c0) and raygui ( https://github.com/raysan5/raygui/commit/623bc61f29839d451061252e1cc93edb013c2f8c )

2024-03-02  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/25caf14be8d0284aceaa0de28753b3012e71b7bb )

2024-02-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/2a774a88f5532908e09b15602d1482be96470f7f ) and raygui ( https://github.com/raysan5/raygui/commit/bc67f42209cc32965c7d1c00028e3ed0c4158659 )

2024-02-18  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/c251e9309e066b9d2aa5ecbd15bcee45b9bef528 ) and raygui ( https://github.com/raysan5/raygui/commit/a9e5e900586cc264d5af5c88552b66bafe9970f5 )

2024-02-03  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/29ff658d9223068378269e4a705811f085fafdf4 ) and raygui ( https://github.com/raysan5/raygui/commit/58411f4cceb8ae82933f2001461db9940278fdeb )

2024-01-27  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/snake_case_rlgl : Added

2024-01-20  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Raylib.load_lib : Added 'method_naming' option to import APIs in snake case convention
	* examples/snake_case_api.rb : Added

2024-01-07  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated README
	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/be0ea89f830cce2fcb62acfedc69da4faca11b43 )
